test/files/pos/t5692b/Test_2.scala
class Test {
  def x = Macros.foo
}