test/files/neg/bug1286/a.scala
trait Foo {
  def jump = Foo.x
}
